--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-Flask==1.1.2
-grequests==0.7.0
-pandas==1.4.4
-requests==2.28.1
-pyspark==3.5.0
-Jinja2==2.11.3
-markupsafe==2.0.1
+Flask
+pyspark
+pandas
+requests
